Landing products page images flickering fix
- Images styles were moved from css module to html as inline style temporary to prevent flickering

--- a/front/features/products/landing/about/comps/product_figure.module.scss
+++ b/front/features/products/landing/about/comps/product_figure.module.scss
@@ -2,12 +2,14 @@
 @use "./styles/mixins" as *;
 
 .landing_product_figure {
-  .image {
-    width: 100%;
+  .figure {
+    // display: flex;
 
-    padding: 1rem;
-
-    object-fit: contain;
+    // width: 100%;
+    // height: 100%;
+    .image {
+      // padding: 1rem;
+    }
   }
 
   .thumbnails {
@@ -17,33 +19,20 @@
     padding: 5px 0;
     margin: 0 10%;
 
-    height: 5rem;
-
     overflow-x: auto;
     overflow-y: hidden;
 
     .thumbnail {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
       //todo make thumbnails smaller in width
-      // width: 5rem;
+      border-radius: 3px;
+      box-shadow: 0 0 1px 1px rgba($color-wh-lightsilv, 0.5);
 
-      padding: 5px;
-
-      border-radius: 5px;
-
-      border: 1px solid transparent;
-
-      &.selected {
-        border-color: $color-green-medbud;
+      &:first-child {
+        margin-left: 5px;
       }
 
-      .thumbnail_image {
-        object-fit: contain;
-        height: 100%;
-        width: min-content;
+      &.selected {
+        box-shadow: 0 0 1px 1px $color-green-medbud;
       }
     }
 
